--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+@import url('https://fonts.cdnfonts.com/css/noto-sans-mro');
+
+* {
+  text-decoration: none !important;
+  scroll-behavior: smooth;
+  font-family: 'Noto Sans Mro', sans-serif;
+}
+body {
+  background-color: #202428 !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+  margin: 0 auto;
+}
+input {
+  width: 70vw;
+}
+input:focus {
+  outline: none !important;
+}
+input::placeholder {
+  color: #fff !important;
+  opacity: 0.7;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 1024px) {
+  input {
+    width: 600px !important;
+  }
+  .sideDesktop {
+    width: 250px;
+    background-color: #101010;
+    min-height: 100vh;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 768px) {
+  input {
+    width: 400px;
   }
 }
