--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,75 @@ input::placeholder {
 .menu {
   padding: 5px 10px;
 }
+.outlet {
+  width: 100%;
+}
+.drawer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0f1113;
+  z-index: 10;
+  overflow-y: scroll;
+  transition: 0.5s ease-in;
+}
+.posterBackdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+  z-index: 2;
+}
+
+.media_poster {
+  width: 80%;
+  height: auto;
+}
+.trailerVid {
+  width: 250px;
+  height: 100%;
+  background-color: transparent;
+  cursor: pointer;
+  border: 1px solid #fff;
+}
+.trailerVid:hover {
+  background-color: rgb(64, 62, 62);
+  border: 1px solid orange;
+}
+.modalbox {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  transition: all 0.3s;
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #101010;
+  opacity: 0.8;
+  width: 100%;
+  height: 100%;
+}
+.contentbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin-top: 4rem;
+}
+.reactplayer {
+  width: 100%;
+  height: 100%;
+}
 
 @media (min-width: 1024px) {
   input {
@@ -60,6 +129,9 @@ input::placeholder {
   .outlet {
     width: calc(100% - 250px);
   }
+  .media_poster {
+    width: 300px !important;
+  }
 }
 @media (min-width: 768px) {
   input {
@@ -70,5 +142,13 @@ input::placeholder {
   }
   .mediaCard:hover {
     border: 1px solid orange;
+  }
+  .media_poster {
+    width: 270px;
+  }
+  .contentbox {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
