--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,11 @@ body {
   background-color: #0f1113 !important;
 }
 
-input {
-  width: 65vw;
+input,
+.searchResult {
+  width: 60vw;
 }
+
 input:focus {
   outline: none !important;
 }
@@ -112,11 +114,21 @@ input::placeholder {
   width: 100%;
   height: 100%;
 }
+.personImg {
+  width: 100%;
+  max-height: 500px;
+  object-fit: contain;
+}
+.hover-me:hover{
+  background-color: #626060;
+}
 
 @media (min-width: 1024px) {
-  input {
+  input,
+  .searchResult {
     width: 500px !important;
   }
+
   .menu:hover {
     background-color: #1d1c1c;
     border-radius: 1px;
@@ -127,14 +139,15 @@ input::placeholder {
     flex: 0 1 170px;
   }
   .outlet {
-    width: calc(100% - 250px);
+    width: calc(100% - 200px);
   }
   .media_poster {
     width: 300px !important;
   }
 }
 @media (min-width: 768px) {
-  input {
+  input,
+  .searchResult {
     width: 400px;
   }
   .mediaCard {
